Add Lunch Image and App icons

--- a/MemeMe/Base.lproj/LaunchScreen.storyboard
+++ b/MemeMe/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lunch-Image-Custom" translatesAutoresizingMaskIntoConstraints="NO" id="jxk-S3-hyS">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jxk-S3-hyS" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="VS7-5G-NRy"/>
+                            <constraint firstItem="jxk-S3-hyS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ccf-CO-ca8"/>
+                            <constraint firstItem="jxk-S3-hyS" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="hUt-Nr-EEj"/>
+                            <constraint firstItem="jxk-S3-hyS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jSr-0f-JdX"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lunch-Image-Custom" width="1536" height="2048"/>
+    </resources>
 </document>
