--- a/MemeMe/Base.lproj/LaunchScreen.storyboard
+++ b/MemeMe/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lunch-Image-Custom" translatesAutoresizingMaskIntoConstraints="NO" id="jxk-S3-hyS">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch-Image-Custom" translatesAutoresizingMaskIntoConstraints="NO" id="jxk-S3-hyS">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                         </subviews>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Lunch-Image-Custom" width="1536" height="2048"/>
+        <image name="Launch-Image-Custom" width="1536" height="2048"/>
     </resources>
 </document>
