--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
         <!--Meme EditorVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MemeEditorVC" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeEditor" id="BYZ-38-t0r" customClass="MemeEditorVC" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -89,15 +89,19 @@
                             <constraint firstItem="xfu-CC-xz7" firstAttribute="top" secondItem="F6o-fb-Ba9" secondAttribute="bottom" constant="13" id="6Aq-uZ-PNs"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DPI-Vy-CvX" secondAttribute="trailing" id="GGP-FA-9cx"/>
                             <constraint firstItem="nV9-vx-cnx" firstAttribute="trailing" secondItem="F6o-fb-Ba9" secondAttribute="trailing" id="KxK-ds-OV2"/>
+                            <constraint firstItem="DPI-Vy-CvX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NcD-cC-Fnk"/>
+                            <constraint firstItem="DPI-Vy-CvX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="QNV-ys-2cF"/>
                             <constraint firstItem="xfu-CC-xz7" firstAttribute="top" secondItem="DPI-Vy-CvX" secondAttribute="bottom" id="Vwy-0D-3qj"/>
                             <constraint firstItem="nV9-vx-cnx" firstAttribute="leading" secondItem="F6o-fb-Ba9" secondAttribute="leading" id="Wuc-sS-dPc"/>
                             <constraint firstItem="nV9-vx-cnx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="ZTa-Lw-r3w"/>
                             <constraint firstItem="xfu-CC-xz7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="btM-OY-MrH"/>
+                            <constraint firstItem="xfu-CC-xz7" firstAttribute="top" secondItem="DPI-Vy-CvX" secondAttribute="bottom" id="ck9-Wn-z7M"/>
                             <constraint firstItem="xfu-CC-xz7" firstAttribute="top" secondItem="DPI-Vy-CvX" secondAttribute="bottom" id="eAh-np-DN7"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xfu-CC-xz7" secondAttribute="bottom" id="fLI-EP-H17"/>
                             <constraint firstItem="nV9-vx-cnx" firstAttribute="leading" secondItem="DPI-Vy-CvX" secondAttribute="leading" id="fyF-IV-hhq"/>
                             <constraint firstItem="DPI-Vy-CvX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="mdN-79-0MU"/>
                             <constraint firstItem="DPI-Vy-CvX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pif-cZ-Onw"/>
+                            <constraint firstItem="DPI-Vy-CvX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="qKC-K3-tgz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xfu-CC-xz7" secondAttribute="trailing" constant="-20" id="rPf-R2-8ac"/>
                         </constraints>
                     </view>
@@ -257,37 +261,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jQp-Rc-wKS">
-                                <rect key="frame" x="20" y="20" width="560" height="550"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jQp-Rc-wKS">
+                                <rect key="frame" x="20" y="64" width="560" height="515"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sent at" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axN-wm-KdS">
-                                <rect key="frame" x="0.0" y="575" width="600" height="25"/>
+                                <rect key="frame" x="0.0" y="579" width="600" height="21"/>
                                 <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="cjY-kx-1Y2"/>
+                                    <constraint firstAttribute="height" constant="21" id="eLK-Qy-8Yz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.94191919189999995" green="0.94191919189999995" blue="0.94191919189999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="axN-wm-KdS" firstAttribute="top" secondItem="jQp-Rc-wKS" secondAttribute="bottom" constant="5" id="1nL-vd-cG3"/>
+                            <constraint firstItem="axN-wm-KdS" firstAttribute="top" secondItem="jQp-Rc-wKS" secondAttribute="bottom" id="090-Sl-ct4"/>
+                            <constraint firstItem="axN-wm-KdS" firstAttribute="top" secondItem="jQp-Rc-wKS" secondAttribute="bottom" constant="1" id="0RB-lF-ZhQ"/>
                             <constraint firstItem="jQp-Rc-wKS" firstAttribute="leading" secondItem="hts-dS-lMu" secondAttribute="leadingMargin" id="4gz-d7-EFn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="axN-wm-KdS" secondAttribute="trailing" constant="-20" id="7Ji-NU-fz8"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="top" secondItem="YSl-oZ-9rz" secondAttribute="bottom" id="Bwl-hj-eVr"/>
                             <constraint firstItem="jQp-Rc-wKS" firstAttribute="trailing" secondItem="hts-dS-lMu" secondAttribute="trailingMargin" id="Eyx-VQ-QfX"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="trailing" secondItem="hts-dS-lMu" secondAttribute="trailingMargin" id="KVH-2Y-pg4"/>
                             <constraint firstItem="WWg-Qf-A7b" firstAttribute="top" secondItem="axN-wm-KdS" secondAttribute="bottom" id="MSR-5Y-4yN"/>
                             <constraint firstItem="axN-wm-KdS" firstAttribute="leading" secondItem="hts-dS-lMu" secondAttribute="leadingMargin" constant="-20" id="hMy-RE-ZgO"/>
-                            <constraint firstItem="axN-wm-KdS" firstAttribute="top" secondItem="jQp-Rc-wKS" secondAttribute="bottom" id="mMx-R4-RRm"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="trailing" secondItem="hts-dS-lMu" secondAttribute="trailingMargin" id="j2w-ft-WoR"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="top" secondItem="YSl-oZ-9rz" secondAttribute="bottom" id="kt7-vO-xXU"/>
                             <constraint firstItem="jQp-Rc-wKS" firstAttribute="top" secondItem="YSl-oZ-9rz" secondAttribute="bottom" id="n79-9p-YSF"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="leading" secondItem="hts-dS-lMu" secondAttribute="leadingMargin" id="uvP-0h-tgd"/>
+                            <constraint firstItem="jQp-Rc-wKS" firstAttribute="leading" secondItem="hts-dS-lMu" secondAttribute="leadingMargin" id="vgn-dY-YUO"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="mMx-R4-RRm"/>
+                                <exclude reference="0RB-lF-ZhQ"/>
                             </mask>
                         </variation>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="memeViewer" destination="jQp-Rc-wKS" id="wTX-Ah-VEk"/>
@@ -296,7 +307,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8AV-P3-mDf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1666" y="645"/>
+            <point key="canvasLocation" x="1678" y="677"/>
         </scene>
         <!--View as Grid-->
         <scene sceneID="uRP-AV-8tI">
